# 3823B1PM2_BEST

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
0-Begin_Task/: sum.h
1-type/byte/: test.c
1-type/clock/: test.c
1-type/point/: test.c
4-array/kernel/: test.c
5-pointer/matrix_multy/: README.md
7-recursion/new_series/: README.md
8-strings/: CMakeLists.txt
9-files/: CMakeLists.txt
9-files/christmas_tree/: README.md
9-files/smyle_file/: README.md  test.c
9-files/what_word/: test.c
